--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     
     <!-- Navbar START -->
-    <nav>
+    <nav class="nav">
         <div class="container">
             <ul>
                 <!-- <li><a href="" class="judul">Rekayasa Perangkat Lunak</a></li> -->
                 <li>
                     <a href="" class="judul">
-                        <img src="assets\img\hero\Logo RPL 2024.png" alt="">
+                        <img src="assets\img\hero\Logo RPL 2024.png" alt="" style="filter: none;">
                     </a>
                 </li>
             </ul>
@@ -74,8 +74,8 @@
     <!-- Hero START -->
     <div class="hero">
         <div class="container">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
-
+            <img src="https://lms.global.ac.id/lms/pluginfile.php/5461/course/overviewfiles/rpl-app.png" alt="">
+            <!-- <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidbDUb3sBy9FQELTMVy3cNS6t4b5nNnvryuB5iM0W6ZVjJjC8wJrB7IL1GH72gfBSzJmYg_11nUAzXRo-hsgvCMKFe7MNkdINl35YT6Q_fdys-11V5X1XxTOo-xNWfHIVaDq7-vdDJ7vDG/s640/rpl.png" alt=""> -->
             <ul>
                 <a href="">
                     <img class="pertama" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
