--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
         <div class="marquee">
             <div class="container">
                 <marquee direction="">
-                    <p>Rekayasa Perangkat Lunak atau Rekayasa Peranti Lunak (RPL, atau dalam bahasa Inggris: Software
-                        Engineering atau SE) adalah satu bidang profesi yang mendalami cara-cara pengembangan peranti lunak
-                        termasuk pembuatan, pemeliharaan, manajemen organisasi pengembangan peranti lunak dan
-                        manajemen mutu</p>
+                    <p>Selamat Datang di Rekayasa Perangkat Lunak SMK Taman Siswa 2 Jakarta!</p>
                 </marquee>
             </div>
         </div>
@@ -76,6 +73,45 @@
         <div class="container">
             <img src="https://lms.global.ac.id/lms/pluginfile.php/5461/course/overviewfiles/rpl-app.png" alt="">
             <!-- <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidbDUb3sBy9FQELTMVy3cNS6t4b5nNnvryuB5iM0W6ZVjJjC8wJrB7IL1GH72gfBSzJmYg_11nUAzXRo-hsgvCMKFe7MNkdINl35YT6Q_fdys-11V5X1XxTOo-xNWfHIVaDq7-vdDJ7vDG/s640/rpl.png" alt=""> -->
+        </div>
+    </div>
+    <!-- Hero END -->
+
+
+    <!-- Content START -->
+    <div class="content">
+        <div class="container">
+            <div class="content-text">
+                <h2>REKAYASA PERANGKAT LUNAK</h2>
+                <ul>
+                    <p>Rekayasa perangkat lunak (RPL) adalah sebuah bidang profesi dan mata pelajaran yang mempelajari tentang pengembangan perangkat lunak. RPL adalah proses terstruktur dan sistematis untuk membangun perangkat lunak berkualitas tinggi yang berfungsi dengan baik dan memenuhi kebutuhan pengguna. RPL mencakup bidang yang mempelajari pengembangan, operasi, dan pemeliharaan perangkat lunak, meliputi juga metode, bahasa, dan alat bantu (teknologi) yang dapat digunakan dalam rekayasa perangkat lunak tersebut.</p>
+
+<br>
+
+                    <h3>Konsep dan prinsip dasar dalam RPL melipputi: </h3>
+                    <ul>
+                        <li>Proses pengembangan perangkat lunak </li>
+                        <li>Manajemen proyek perangkat lunak </li>
+                        <li>Pengujian perangkat lunak</li>
+                        <li>Dokumentasi perangkat lunak</li>
+                        <li>Pengembangan perangkat lunak berbasis tim</li>
+                        <li>Kualitas perangkat lunak</li>
+                        <p>Reusabilitas perangkat lunak</p>
+                    </ul>
+
+                    <p>Di Indonesia, RPL dijadikan disiplin ilmu yang dipelajari mulai tingkat Sekolah Menengah Kejuruan (SMK) sampai tingkatan Perguruan Tinggi. Lulusan Jurusan Rekayasa Perangkat Lunak sangat dibutuhkan perannya, sebab tidak semua orang dapat memegang dan paham mengenai pemrograman. </p>
+            </ul>
+            </div>
+        </div>
+    </div>
+    <!-- Content END -->
+
+
+
+    <!-- Berita START  -->
+    <div class="berita">
+        <div class="container">
+            <h2>Bertia Terbaru Lainnya</h2>
             <ul>
                 <a href="">
                     <img class="pertama" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
@@ -89,55 +125,13 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
                 </a>
 
-            </ul>
+                <a href="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
+                </a>
 
-        </div>
-    </div>
-    <!-- Hero END -->
-
-
-    <!-- Content START -->
-    <div class="content">
-        <div class="container">
-            <h2>REKAYASA PERANGKAT LUNAK</h2>
-            <ul>
-                <p>Rekayasa perangkat lunak (RPL) adalah sebuah bidang profesi dan mata pelajaran yang mempelajari tentang pengembangan perangkat lunak. RPL adalah proses terstruktur dan sistematis untuk membangun perangkat lunak berkualitas tinggi yang berfungsi dengan baik dan memenuhi kebutuhan pengguna. RPL mencakup bidang yang mempelajari pengembangan, operasi, dan pemeliharaan perangkat lunak, meliputi juga metode, bahasa, dan alat bantu (teknologi) yang dapat digunakan dalam rekayasa perangkat lunak tersebut.</p>
-
-<br>
-
-                <h3>Konsep dan prinsip dasar dalam RPL melipputi: </h3>
-                <ul>
-                    <li>Proses pengembangan perangkat lunak </li>
-                    <li>Manajemen proyek perangkat lunak </li>
-                    <li>Pengujian perangkat lunak</li>
-                    <li>Dokumentasi perangkat lunak</li>
-                    <li>Pengembangan perangkat lunak berbasis tim</li>
-                    <li>Kualitas perangkat lunak</li>
-                    <p>Reusabilitas perangkat lunak</p>
-                </ul>
-
-                <p>Di Indonesia, RPL dijadikan disiplin ilmu yang dipelajari mulai tingkat Sekolah Menengah Kejuruan (SMK) sampai tingkatan Perguruan Tinggi. Lulusan Jurusan Rekayasa Perangkat Lunak sangat dibutuhkan perannya, sebab tidak semua orang dapat memegang dan paham mengenai pemrograman. </p>
             </ul>
         </div>
     </div>
-    <!-- Content END -->
-
-
-    <!-- Visi dan Misi START -->
-    <div class="visi">
-        <div class="container">
-        <h2 class="visi">Visi</h2>
-            <ul>
-                <img src="assets\img\tujuan\Visi\Visi.png" alt="">
-            </ul>
-<br>
-        <h2 class="misi">Misi</h2>
-            <ul>
-                <img src="assets\img\tujuan\misi\Misi.png" alt="">
-            </ul>
-        </div>
-    </div>
-    <!-- Visi dan Misi END -->
-
+    <!-- Berita END  -->
 </body>
 </html>
