--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- marquee START -->
         <div class="marquee">
             <div class="container">
-                <marquee direction="">
+                <marquee direction="" scrollamount="10">
                     <p>Selamat Datang di Rekayasa Perangkat Lunak SMK Taman Siswa 2 Jakarta!</p>
                 </marquee>
             </div>
@@ -96,7 +96,7 @@
                         <li>Dokumentasi perangkat lunak</li>
                         <li>Pengembangan perangkat lunak berbasis tim</li>
                         <li>Kualitas perangkat lunak</li>
-                        <p>Reusabilitas perangkat lunak</p>
+                        <li>Reusabilitas perangkat lunak</li>
                     </ul>
 
                     <p>Di Indonesia, RPL dijadikan disiplin ilmu yang dipelajari mulai tingkat Sekolah Menengah Kejuruan (SMK) sampai tingkatan Perguruan Tinggi. Lulusan Jurusan Rekayasa Perangkat Lunak sangat dibutuhkan perannya, sebab tidak semua orang dapat memegang dan paham mengenai pemrograman. </p>
@@ -106,7 +106,26 @@
     </div>
     <!-- Content END -->
 
+    <!-- visi dan Misi START -->
+        <div class="tujuan">
+            <div class="container">
+                <h2>Visi dan Misi RPL <br> dalam Tamansiswa</h2>
+                <ul>
+                    <!-- Visi START -->
+                    <a href="">
+                        <img src="assets\img\tujuan\Visi\Visi.png" alt="">
+                    </a>
+                    <!-- Visi END -->
 
+                    <!-- Misi START -->
+                    <a href="">
+                        <img src="assets\img\tujuan\misi\Misi.png" alt="">
+                    </a>
+                    <!-- Misi END -->
+                </ul>
+            </div>
+        </div>
+    <!-- visi dan Misi END -->
 
     <!-- Berita START  -->
     <div class="berita">
