--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPL - TAMANSISWA</title>
+    <title>RPL - TAMANSISWA 2 | JAKARTA</title>
 
     <!-- CSS START -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -152,5 +152,18 @@
         </div>
     </div>
     <!-- Berita END  -->
+
+
+    <!-- WA START -->
+    <div class="wa">
+        <div class="container">
+            <ul>
+                <a href="">
+                    <img src="assets\img\wa\wa.png" alt="">
+                </a>
+            </ul>
+        </div>
+    </div>
+    <!-- WA END -->
 </body>
 </html>
