--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Hero START -->
     <div class="hero">
         <div class="container">
-            <img src="https://lms.global.ac.id/lms/pluginfile.php/5461/course/overviewfiles/rpl-app.png" alt="">
+            <img src="assets\img\hero\rpl-app.png" alt="">
             <!-- <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidbDUb3sBy9FQELTMVy3cNS6t4b5nNnvryuB5iM0W6ZVjJjC8wJrB7IL1GH72gfBSzJmYg_11nUAzXRo-hsgvCMKFe7MNkdINl35YT6Q_fdys-11V5X1XxTOo-xNWfHIVaDq7-vdDJ7vDG/s640/rpl.png" alt=""> -->
         </div>
     </div>
@@ -153,15 +153,28 @@
     </div>
     <!-- Berita END  -->
 
+    <!-- Footer START -->
+    <div class="footer">
+        <div class="container">
+            <p>SMK TAMANSISWA 2 JAKARTA ©️ 2024</p>
+        </div>
+    </div>
+    <!-- Footer END -->
 
     <!-- WA START -->
     <div class="wa">
         <div class="container">
             <ul>
                 <a href="">
-                    <img src="assets\img\wa\wa.png" alt="">
+                    <img src="assets\img\contact\wa\wa.png" alt="">
                 </a>
             </ul>
+            <!-- <ul>
+                <a href="">
+                    <img src="assets\img\contact\ig\ig.png" alt="">
+                </a>
+            </ul> -->
+
         </div>
     </div>
     <!-- WA END -->
