--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
         <!-- marquee END -->
             <div class="container">
                 <ul>
-                    <li><a href="">Nav 1</a></li>
-                    <li><a href="">Nav 2</a></li>
-                    <li><a href="">Nav 3</a></li>
-                    <li><a href="">Nav 4</a></li>
+                    <li><a href="">Rekayasa Perangkat Lunak</a></li>
+                    <li><a href="">Visi dan Misi</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -165,7 +164,7 @@
     <div class="wa">
         <div class="container">
             <ul>
-                <a href="">
+                <a href="https://web.whatsapp.com/">
                     <img src="assets\img\contact\wa\wa.png" alt="">
                 </a>
             </ul>
