--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <!-- marquee END -->
             <div class="container">
                 <ul>
-                    <li><a href="">Rekayasa Perangkat Lunak</a></li>
-                    <li><a href="">Visi dan Misi</a></li>
+                    <li><a href="#rekayasa">Rekayasa Perangkat Lunak</a></li>
+                    <li><a href="#tujuan">Visi dan Misi</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
@@ -70,12 +70,13 @@
     <!-- Hero START -->
     <div class="hero">
         <div class="container">
+<br id="rekayasa">
             <img src="assets\img\hero\rpl-app.png" alt="">
+
             <!-- <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEidbDUb3sBy9FQELTMVy3cNS6t4b5nNnvryuB5iM0W6ZVjJjC8wJrB7IL1GH72gfBSzJmYg_11nUAzXRo-hsgvCMKFe7MNkdINl35YT6Q_fdys-11V5X1XxTOo-xNWfHIVaDq7-vdDJ7vDG/s640/rpl.png" alt=""> -->
         </div>
     </div>
     <!-- Hero END -->
-
 
     <!-- Content START -->
     <div class="content">
@@ -97,8 +98,9 @@
                         <li>Kualitas perangkat lunak</li>
                         <li>Reusabilitas perangkat lunak</li>
                     </ul>
-
+                    <br id="tujuan">
                     <p>Di Indonesia, RPL dijadikan disiplin ilmu yang dipelajari mulai tingkat Sekolah Menengah Kejuruan (SMK) sampai tingkatan Perguruan Tinggi. Lulusan Jurusan Rekayasa Perangkat Lunak sangat dibutuhkan perannya, sebab tidak semua orang dapat memegang dan paham mengenai pemrograman. </p>
+
             </ul>
             </div>
         </div>
@@ -164,7 +166,7 @@
     <div class="wa">
         <div class="container">
             <ul>
-                <a href="https://web.whatsapp.com/">
+                <a href="https://wa.me/6281385718958">
                     <img src="assets\img\contact\wa\wa.png" alt="">
                 </a>
             </ul>
