--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <!-- marquee END -->
             <div class="container">
                 <ul>
-                    <li><a href="#rekayasa">Rekayasa Perangkat Lunak</a></li>
-                    <li><a href="#tujuan">Visi dan Misi</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#rekayasa">RPL</a></li>
+                    <li><a href="#tujuan">Visi & Misi</a></li>
+                    <li><a href="https://wa.me/6281385718958?text=Halo_RPL">Contact</a></li>
                 </ul>
             </div>
         </div>
