--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Berita START  -->
     <div class="berita">
         <div class="container">
-            <h2>Bertia Terbaru Lainnya</h2>
+            <h2>Berita Terbaru Lainnya</h2>
             <ul>
                 <a href="">
                     <img class="pertama" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
