--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <div class="container">
             <h2>Berita Terbaru Lainnya</h2>
             <ul>
-                <a href="">
-                    <img class="pertama" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7_cRSvGqhxxhXukhhHIbnKv6qw3HLJmWX_bTt7RtONlJx1v1qsRna9J9beMeNqlAmxDw&usqp=CAU" alt="">
+                <a href="berita\tefa\index.html">
+                    <img class="pertama" src="https://www.anugerahprint.com/liteprint/application/liteprint/anugerah/assets/product_image/16597595041731-dtf_kaos.jpg" alt="">
                 </a>
 
                 <a href="">
