--- a/berita/tefa/index.html
+++ b/berita/tefa/index.html
@@ -15,7 +15,7 @@
         <!-- Font END -->
 
         <!-- Icon START -->
-        <link rel="icon" type="icon" href="..\tefa\assets\img\icon\DSC-Logo.png">
+        <link rel="icon" type="icon" href="berita\tefa\assets\img\icon\DSC-Logo.png">
         <!-- Icon END -->
 </head>
 <body>
@@ -59,7 +59,7 @@
     <div class="hero">
         <div class="container">
 <br id="about">
-            <img src="..\tefa\assets\img\hero\hero.jpeg" alt="">
+            <img src="berita\tefa\assets\img\hero\hero.jpeg" alt="">
         </div>
     </div>
     <!-- Hero END -->
@@ -105,15 +105,15 @@
 
             <div class="portfolio-img">
                 <a href="">
-                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
 
                 <a href="">
-                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
 
                 <a href="">
-                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
             </div>
         </div>
