--- a/berita/tefa/index.html
+++ b/berita/tefa/index.html
@@ -59,7 +59,7 @@
     <div class="hero">
         <div class="container">
 <br id="about">
-            <img src="berita\tefa\assets\img\hero\hero.jpeg" alt="">
+            <img src="..\tefa\assets\img\hero\hero.jpeg" alt="">
         </div>
     </div>
     <!-- Hero END -->
@@ -105,15 +105,15 @@
 
             <div class="portfolio-img">
                 <a href="">
-                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
 
                 <a href="">
-                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
 
                 <a href="">
-                    <img src="berita\tefa\assets\img\portfolio\portfolio.jpg" alt="">
+                    <img src="..\tefa\assets\img\portfolio\portfolio.jpg" alt="">
                 </a>
             </div>
         </div>
