--- a/berita/tefa/index.html
+++ b/berita/tefa/index.html
@@ -15,7 +15,7 @@
         <!-- Font END -->
 
         <!-- Icon START -->
-        <link rel="icon" type="icon" href="berita\tefa\assets\img\icon\DSC-Logo.png">
+        <link rel="icon" type="icon" href="..\tefa\assets\img\icon\DSC-Logo.png">
         <!-- Icon END -->
 </head>
 <body>
@@ -69,6 +69,9 @@
         <div class="container">
             <div class="about-text">
                 <h2>About</h2>                    
+                <hr color="gold">
+<br>
+                <img src="..\tefa\assets\img\About\about.jpg" alt="">
 <br id="services">
                 <p>TEFAPrint DTF adalah solusi cetak digital yang terbaik untuk kebutuhan bisnis dan personalmu. Dengan teknologi canggih dan kualitas hasil cetak yang tinggi, kami menawarkan pengalaman cetak digital yang sangat memuaskan. Dari gambar-gambar desain yang halus hingga warna-warna yang beragam, TEFAPrint DTF dapat membantu kamu mencetak produk yang berkualitas dengan mudah dan cepat.</p>
             </div>
@@ -82,6 +85,9 @@
         <div class="container">
             <div class="services-text">
                 <h2>Services</h2>
+                <hr color="gold">
+<br>
+                <img src="..\tefa\assets\img\Services\Services.jpg" alt="">
                     <p>Service yang Kami Tawarkan:</p>
                     <ul>
                         <li><b>Cetak Digital</b>: Kami menawarkan layanan cetak digital yang cepat dan mudah, dengan kualitas hasil cetak yang tinggi.</li>
@@ -100,6 +106,8 @@
 
             <div class="portfolio-text">
                 <h2>Portfolio Kami</h2>
+                <hr color="gold">
+<br>
                 <p>Berikut adalah contoh-contoh kerja yang telah kita lakukan untuk berbagai klien dan proyek:</p>
             </div>
 
