--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Whisper&display=swap" rel="stylesheet">
     <!-- Font END -->
 
-    <!-- Icon -->
-    <link rel="icon" type="icon" href="assets\img\hero\Logo RPL 2024.png">
-    <!-- Icon -->
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="icon\style.css">
+    <!-- Font Awesome -->
 </head>
 <body>
 
@@ -49,7 +49,7 @@
         <!-- marquee END -->
             <div class="container">
                 <ul>
-                    <li><a href="#rekayasa">RPL</a></li>
+                    <li><a href="#rekayasa"><i></i>RPL</a></li>
                     <li><a href="#tujuan">Visi & Misi</a></li>
                     <li><a href="https://wa.me/6281385718958?text=Halo_RPL">Contact</a></li>
                 </ul>
@@ -154,6 +154,31 @@
     </div>
     <!-- Berita END  -->
 
+    <!-- Contact START -->
+    <div class="contact">
+        <div class="container">
+            <h2>Contact us</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/smktawadu_jakarta/"><b>Instagram</b></a></li>
+                <li><a href="https://www.tiktok.com/@smktawadu_jakarta"><b>TikTok</b></a></li>
+                <li><a href="https://wa.me/6281385718958"><b>WhatsApp</b></a></li>
+                <li><a href="https://web.facebook.com/SMKTamansiswa2Jakarta"><b>Facebook</b></a></li>
+            </ul>
+        </div>
+    </div>
+
+        <!-- Contact Detail START -->
+            <div class="contact-detail">
+                <div class="container">
+                    <ul>
+                        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.92259072048952!2d106.84496312600618!3d-6.162693982356587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4eb37630ecccb38f!2sSMK%20Tamansiswa%202%20Jakarta%2C%20Jalan%20Garuda%2044%20Kemayoran%20Jakarta%20Pusat!5e0!3m2!1sid!2sid!4v1585736160584!5m2!1sid!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
+                    </ul>
+                </div>
+            </div>
+        <!-- Contact Detail END -->
+         
+    <!-- Contact END -->
+
     <!-- Footer START -->
     <div class="footer">
         <div class="container">
@@ -161,6 +186,7 @@
         </div>
     </div>
     <!-- Footer END -->
+
 
     <!-- WA START -->
     <div class="wa">
@@ -179,5 +205,6 @@
         </div>
     </div>
     <!-- WA END -->
+     
 </body>
 </html>
