--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Whisper&display=swap" rel="stylesheet">
     <!-- Font END -->
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="icon\style.css">
-    <!-- Font Awesome -->
-</head>
+    <!-- Font Material Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons"></head>
+    <!-- Font Material Icons -->
 <body>
 
     
@@ -161,7 +160,7 @@
             <ul>
                 <li><a href="https://www.instagram.com/smktawadu_jakarta/"><b>Instagram</b></a></li>
                 <li><a href="https://www.tiktok.com/@smktawadu_jakarta"><b>TikTok</b></a></li>
-                <!-- <li><a href="https://wa.me/6281385718958"><b>WhatsApp</b></a></li> -->
+                <li><a href="https://wa.me/6281385718958"><b>WhatsApp</b></a></li>
                 <li><a href="https://web.facebook.com/SMKTamansiswa2Jakarta"><b>Facebook</b></a></li>
             </ul>
         </div>
