--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <ul>
                 <li><a href="https://www.instagram.com/smktawadu_jakarta/"><b>Instagram</b></a></li>
                 <li><a href="https://www.tiktok.com/@smktawadu_jakarta"><b>TikTok</b></a></li>
-                <li><a href="https://wa.me/6281385718958"><b>WhatsApp</b></a></li>
+                <!-- <li><a href="https://wa.me/6281385718958"><b>WhatsApp</b></a></li> -->
                 <li><a href="https://web.facebook.com/SMKTamansiswa2Jakarta"><b>Facebook</b></a></li>
             </ul>
         </div>
