--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <ul>
                     <li><a href="#rekayasa"><i></i>RPL</a></li>
                     <li><a href="#tujuan">Visi & Misi</a></li>
-                    <li><a href="https://wa.me/6281385718958?text=Halo_RPL">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -154,7 +154,7 @@
     <!-- Berita END  -->
 
     <!-- Contact START -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <h2>Contact us</h2>
             <ul>
